[package]
name = "transit-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["import-gtfs"]

[dependencies]
chrono = "0.4"
itertools = "0.10"
maud = "0.23"
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgis = "0.9.0"
r2d2_postgres = "0.18"
r2d2 = "0.8"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_async_compression = "0.1.0"
rocket_sync_db_pools = {version = "0.1.0-rc.1", default-features = false, features = ["postgres_pool"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"]}