[package]
name = "import-gtfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "import-gtfs"

[dependencies]
chrono = "0.4"
gtfs-structures = { default-features = false, version = "0.29.0" }
rgb = "0.8"
serde_plain = "1.0"
string-interner = "0.14.0"
structopt = { version = "0.3", default-features = false }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
# postgis = "0.9"
uuid = { version = "0.8", features = ["v4"] }